--- a/Desafio 6 - Websockets/EJS/package.json
+++ b/Desafio 6 - Websockets/EJS/package.json
@@ -13,7 +13,9 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "ejs": "^3.1.6"
+    "node-emoji": "^1.11.0",
+    "socket.io": "^4.1.3"
   }
 }
