--- a/Proyecto Final 1°/package.json
+++ b/Proyecto Final 1°/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --config nodemon.json --inspect ./servidor.js"
+    "start": "nodemon --config nodemon.json --inspect ./backend/servidor.js"
   },
   "author": "",
   "license": "ISC",
