--- a/Proyecto Final 1°/.vscode/launch.json
+++ b/Proyecto Final 1°/.vscode/launch.json
@@ -21,7 +21,7 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}\\agustinsadaca.js"
+      "program": "${workspaceFolder}\\backend\\servidor.js"
     }
   ]
 }
