--- a/Proyecto Final 2°/package.json
+++ b/Proyecto Final 2°/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "./backend/servidor.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --config nodemon.json --inspect ./backend/servidor.js"
+    "start": "nodemon --config nodemon.json --inspect ./backend/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
-    "mongoose": "^6.0.8"
+    "mongoose": "^6.0.8",
+    "node-emoji": "^1.11.0"
   }
 }
