--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --config nodemon.json --inspect ./backend/index.js"
+    "start": "node ./backend/index.js"
   },
   "author": "",
   "license": "ISC",
