--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGOURI='mongodb://localhost:27017/ecommerce'
+MONGOURI='mongodb+srv://agustinsadaca1:1234@cluster0.7rs4r.mongodb.net/ecommerce?retryWrites=true&w=majority'
 SESSION_SECRET=mylittlesecret node index.js
 EXPIRE=365 * 24 * 60 * 60 * 1000
 
