--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.3",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
@@ -29,6 +30,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.0.0",
-    "passport-utils": "^0.1.1"
+    "passport-utils": "^0.1.1",
+    "socket.io": "^4.4.1"
   }
 }
