--- a/Proyecto Final 1°/package.json
+++ b/Proyecto Final 1°/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "moment": "^2.29.1"
   }
