--- a/Proyecto Final 2°/.env
+++ b/Proyecto Final 2°/.env
@@ -1,1 +1,3 @@
-MONGOURI='mongodb://localhost:27017/ecommerce'
+MONGOURI='mongodb+srv://agustinsadaca1:coderhouse2711@cluster0.7rs4r.mongodb.net/ecommerce?retryWrites=true&w=majority'
+PATH='./DB'
+MODO_PERSISTENCIA='mongodb'
