--- a/Proyecto Final 4°/.env
+++ b/Proyecto Final 4°/.env
@@ -1,4 +1,4 @@
-MONGOURI='mongodb+srv://agustinsadaca1:1234@cluster0.7rs4r.mongodb.net/ecommerce?retryWrites=true&w=majority'
+MONGOURI='mongodb+srv://agustinsadaca1:coderhouse2711@cluster0.7rs4r.mongodb.net/ecommerce?retryWrites=true&w=majority'
 SESSION_SECRET=kjfjdhrhrerj-uurhr-jjge
 EXPIRE=365 * 24 * 60 * 60 * 1000
 
