--- a/Desafio 17 - Despliegue en la nube/package.json
+++ b/Desafio 17 - Despliegue en la nube/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "--inspect ./backend/index.js",
+    "start": "node ./backend/index.js",
     "start:dev": "nodemon --inspect ./backend/index.js"
   },
   "author": "",
