--- a/Desafio 17 - Despliegue en la nube/package.json
+++ b/Desafio 17 - Despliegue en la nube/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./backend/index.js",
-    "start:dev": "nodemon --inspect ./backend/index.js"
+    "start:dev": "nodemon --inspect ./backend/index.js",
+    "build": "react-scripts build"
   },
   "author": "",
   "license": "ISC",
