--- a/Proyecto Final 4°/.env
+++ b/Proyecto Final 4°/.env
@@ -17,7 +17,7 @@ GMAIL_PASSWORD="xrsrliaenrstjixe"
 URL_FRONT='http://localhost:3000'
 
 ##JWT
-JWT_SECRET=mXNS1Zs1JaU*
+PRIVATE_KEY=mXNS1Zs1JaU*
 REFRESH_TOKEN_EXPIRY = 60 * 60 * 24 * 30
 REFRESH_TOKEN_SECRET = kjfjdhrhrerj-uurhr-jjge
 SESSION_EXPIRY = 60 * 15
