--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,5 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [    
-        
-
+    "configurations": [
     {
         "name": "Attach by Process ID",
         "processId": "${command:PickProcess}",
@@ -13,16 +7,7 @@
         "skipFiles": [
             "<node_internals>/**"
         ],
-        "type": "pwa-node"
-    },
-        {
-            "type": "pwa-node",
-            "request": "launch",
-            "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}\\Proyecto Final 1°\\backend\\servidor.js"
-        }
+        "type": "node"
+    }
     ]
 }
