--- a/Proyecto Final 4°/package.json
+++ b/Proyecto Final 4°/package.json
@@ -31,11 +31,7 @@
     "mongoose": "^6.0.8",
     "node-emoji": "^1.11.0",
     "nodemailer": "^6.7.2",
-    "passport": "^0.5.2",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.0.0",
-    "passport-utils": "^0.1.1",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "uuid": "^9.0.0"
   }
 }
