--- a/Proyecto Final 4°/package.json
+++ b/Proyecto Final 4°/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -29,6 +30,7 @@
     "minimist": "^1.2.6",
     "moment": "^2.29.1",
     "mongoose": "^6.0.8",
+    "multer": "^1.4.5-lts.1",
     "node-emoji": "^1.11.0",
     "nodemailer": "^6.7.2",
     "socket.io": "^4.4.1",
