--- a/.env
+++ b/.env
@@ -10,8 +10,7 @@ AUTH_PASS=gsgd@jjr2Nchwgl
 SID=AC7451496347599cccd9e3c42c55dcf768
 TOKEN=6c48cab3322ba51cfe7f7d9b07d6aa13
 GMAIL_USER="agustinsadaca@gmail.com"
-GMAIL_PASSWORD="xrsrliaenrstjixe"
-
+GMAIL_PASSWORD=cfpyqgzhgvnmaapx
 
 ##Frontend
 URL_FRONT='http://localhost:3000'
