--- a/Proyecto Final 4to/package.json
+++ b/Proyecto Final 4to/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "./backend/servidor.js",
   "type": "module",
+  "engines": {
+    "node": "18.2.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./backend/index.js",
-    "dev": "nodemon --inspect ./backend/index.js"
+    "dev": "nodemon ./backend/index.js"
   },
   "author": "",
   "license": "ISC",
